--- a/work_center_real/views/work_center_view.xml
+++ b/work_center_real/views/work_center_view.xml
@@ -50,7 +50,7 @@
             <field name="model">maintenance.equipment</field>
             <field name="inherit_id" ref="maintenance.hr_equipment_view_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='owner_user_id']" position="after">
+                <xpath expr="//field[@name='category_id']" position="after">
                     <field name="code"/>
                     <field name="numbers_of_workers"/>
                     <field name="range_price_workers"/>
